# gencf

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lexer.rs  lib.rs  tokens.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
tests/: tokens_test.rs
util/: Cargo.toml
util/src/: file_stream.rs  gen_cf_error.rs  lexer.rs  lib.rs  position.rs  token.rs
