[package]
name = "genfc_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.72", features = ["full", "visit", "visit-mut", "extra-traits"] }
quote = "1.0"